@@ -1,6 +1,7 @@
 2007-08-26  Badlop  <badlop@ono.com>
 
-	* src/mod_webpresence.erl: Renamed mod_presence.erl to mod_webpresence.erl.
+	* src/mod_webpresence.erl: Renamed mod_presence.erl to mod_webpresence.erl. Updated table format. XForm support for Hash and JID URLs.
+
 	* Emakefile: Idem.
 	* README.txt: Idem.
 
